# eris

./: .gitignore  CMakeLists.txt  README.md
examples/: autonomous_vehicle_example.xml
examples/dissertation/: mini_example.xml  moo_example.xml  motivational_example.xml  recovery_example.xml
examples/modularization/: CAN1.pm  CAN1.xml  case_study_paper.pm  experiment.pctl  gateway_uncritical_main.pm  gateway_uncritical_main.xml  gateway_uncritical_topmodule.pm  gateway_uncritical_topmodule.xml  main_prop.pctl  results.txt  submodule.xml  topmodule.pm
src/: CMakeLists.txt  eris_config.h  eris_config.h.in  main.cpp
src/eval/: CMakeLists.txt  experiment.h  octave.cpp  octave.h  prism.cpp  prism.h  prism_results_parser.cpp  prism_results_parser.h  xprism.cpp  xprism.h
src/graph/: CMakeLists.txt  component_type.h  counter.cpp  counter.h  edge.cpp  edge.h  edge_item.cpp  edge_item.h  graphic_scene.cpp  graphic_scene.h  graphic_scene_factory.cpp  model.cpp  model.h  node.cpp  node.h  node_item.cpp  node_item.h  operational.cpp  operational.h  rate_interpretation.cpp  rate_interpretation.h  recovery_strategy.cpp  recovery_strategy.h  scene_status.cpp  scene_status.h  text_item.cpp  text_item.h  transcriber.cpp  transcriber.h  transformer.cpp  transformer.h
src/resources/: resources.qrc
src/utils/: CMakeLists.txt  checks.h  command.cpp  command.h  file_manager.cpp  file_manager.h  file_manager_fields.h  list.h  logger.cpp  logger.h  memory.h  node_settings_validator.cpp  node_settings_validator.h  qt_utils.cpp  qt_utils.h  string_utils.cpp  string_utils.h  task.h  tokenizer.cpp  tokenizer.h  utils.h
src/widgets/: CMakeLists.txt  chart_view.cpp  chart_view.h  editor_widget.cpp  editor_widget.h  error_handler.cpp  error_handler.h  errors.h  evaluation_settings.cpp  evaluation_settings.h  evaluation_tab.cpp  evaluation_tab.h  graphics_view.cpp  graphics_view.h  module_chooser_layout.cpp  module_chooser_layout.h  modules_tab_widget.cpp  modules_tab_widget.h  node_settings.cpp  node_settings.h  output_widget.cpp  output_widget.h  plot.cpp  plot.h  properties_table.cpp  properties_table.h  syntax_highlighting.cpp  syntax_highlighting.h  (+2 more)
test/: counter_test.cpp  graph_test.cpp  nodeitem_test.cpp  nodesettings_validator_test.cpp  test_main.cpp
(+15 files in other folders)
